Use LoginManager to login/logout/register user, add calc_trip function to calculate cost of trip using diesel cars
Add login configuration to __init__.py
for using login/logout options with LoginManager.
Register users and add new trip to calculate in database.
Update class Trip. Iformations from this class will be use
to calculate a cost of trip.
Create new templates for creating trip, calculate trip cost and listed a added trips.
Updates trip views and user views.

--- a/diesel_api/templates/index.html
+++ b/diesel_api/templates/index.html
@@ -20,14 +20,14 @@
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <a href="{{ url_for('trip.trip_info_form') }}"><img src="{{ url_for('static', filename='slider-5.jpg') }}" class="d-block w-100" alt="..."></a>
+          <a href="#"><img src="{{ url_for('static', filename='slider-5.jpg') }}" class="d-block w-100" alt="..."></a>
           <div class="carousel-caption d-none d-md-block">
             <h5>Trip Calculator</h5>
             <p>Calculate your moont expenses for your car trip</p>
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <a href="{{ url_for('trip.trip_info_form') }}"><img src="{{ url_for('static', filename='slider-6.jpg') }}" class="d-block w-100" alt="..."></a>
+          <a href="#"><img src="{{ url_for('static', filename='slider-6.jpg') }}" class="d-block w-100" alt="..."></a>
           <div class="carousel-caption d-none d-md-block">
             <h5>Top economic cars</h5>
             <p>Top 10 of economic diesel cars</p>
