--- a/diesel_api/templates/navbar.html
+++ b/diesel_api/templates/navbar.html
@@ -21,7 +21,10 @@
                     <a href="{{ url_for('users.account') }}" class="nav-link {{ 'active' if active_menu=='account'}}">Account</a>
                   </li>
                   <li class="nav-item px-3">
-                    <a href="#" class="nav-link ">Add trip</a>
+                    <a href="{{ url_for('trip.create_trip') }}" class="nav-link {{ 'active' if active_menu=='create_trip'}} ">Add trip</a>
+                  </li>
+                  <li class="nav-item px-3">
+                    <a href="{{ url_for('trip.trip_list') }}" class="nav-link {{ 'active' if active_menu=='trip_list'}}">Trip_list</a>
                   </li>
                   {% else %}
                   <li class="nav-item px-3">
@@ -31,9 +34,6 @@
                     <a href="{{ url_for('users.register') }}" class="nav-link {{ 'active' if active_menu=='register'}}">Register</a>
                   </li>
                   {% endif %}
-                  <li class="nav-item px-3">
-                      <a href="{{ url_for('trip.trip_info_form') }}" class="nav-link {{ 'active' if active_menu=='trip_info_form'}}">Calculator</a>
-                  </li>
               </ul>
           </div>
   </nav>
