Changes in layout page
Change layout of diagram page

--- a/diesel_api/templates/diagram.html
+++ b/diesel_api/templates/diagram.html
@@ -6,33 +6,33 @@
 {% block content %}
 <div class="container">
 
-
-  <div class="Current trends p-5" id="Current trends">
-    <div class="container btn-outline-dark">
+<!-- Current trends section -->
+  <div class="container" id="Current trends">
+    <div class="container btn-outline-dark rowtrends">
       <div class="grid">
         <div class="row">
           <h3>Current trends</h3><p>{{ now_date }} </p>
         </div>
         <div class="row">
 
-          <div class="col-md-3 col-sm-4 bg-secondary btn-outline-light">
-            <p class="h4 fw-bold">Current USD/PL course</p>
-            <p class="h6 fw-bold text-white">1{{dollar_code}}={{mid_rate}}zł</p>
+          <div class="col-md-3 col-sm-4 bg-secondary lab">
+            <p class="h6 fw-bold">Current USD/PL course</p>
+            <p class="h5 fw-bold text-white">1{{dollar_code}}={{mid_rate}}zł</p>
           </div>
 
-          <div class="col-md-3 col-sm-4 bg-secondary btn-outline-light">
-            <p class="h4 fw-bold">Barrent Diesel - Price of 1 Barrel in USD/in PL</p>
-            <p class="h6 fw-bold text-white">75,79$ = 316,04zł</p>
+          <div class="col-md-3 col-sm-4 bg-secondary lab">
+            <p class="h6 fw-bold">Barrent Diesel</p>
+            <p class="h5 fw-bold text-white">75,79$ = 316,04zł</p>
           </div>
 
-          <div class="col-md-3 col-sm-4 bg-secondary btn-outline-light">
-            <p class="h4 fw-bold">Orlen Price for 1 Barrel in PL</p>
-            <p class="h6 fw-bold text-white">524,04zł</p>
+          <div class="col-md-3 col-sm-4 bg-secondary lab">
+            <p class="h6 fw-bold">Barrel' Orlen Price</p>
+            <p class="h5 fw-bold text-white">524,04zł</p>
           </div>
 
-          <div class="col-md-3 col-sm-4 bg-secondary btn-outline-light">
-            <p class="h4 fw-bold">Average Price of Diesel at Gas Station</p>
-            <p class="h6 fw-bold text-white">6,25zł/1L</p>
+          <div class="col-md-3 col-sm-4 bg-secondary lab">
+            <p class="h6 fw-bold">Average Price</p>
+            <p class="h5 fw-bold text-white">6,25zł/1L</p>
           </div>
 
         </div>
